@@ -1,5 +1,5 @@
 name     = XML-SRS
-version  = 0.08
+version  = 0.09
 author   = Catalyst SRS Team <team-srs@catalyst.net.nz>
 license  = Perl_5
 abstract = PRANG implementation of the XML SRS protocol
@@ -15,7 +15,6 @@ MooseX::Params::Validate   = 0.15
 PRANG                      = 0.14
 Regexp::Common             = 0
 MooseX::Timestamp          = 0.06
-Crypt::Password            = 0.05
 MooseX::Aliases            = 0.08
 
 [Prereqs / TestRequires]
