@@ -1,5 +1,17 @@
 =head1 CHANGELOG FOR XML::SRS
 
+
+=head2 VERSION 0.09, 14 February 2011
+
+=over
+
+=item *
+
+Removed dependency on Crypt::Password. Passwords are now sent as plain text,
+which is supported by the SRS (and secure, as they're sent via https).
+
+=back
+
 =head2 VERSION 0.07, 9 February 2011
 
 =over
